# axumlike

./: README.md
axumlike/: Cargo.toml
axumlike/examples/: hello_wrold.rs
axumlike/examples/hello_world/: Cargo.toml
axumlike/examples/hello_world/src/: handlers.rs  main.rs
axumlike/src/: body.rs  error.rs  extract.rs  handler.rs  lib.rs  response.rs  router.rs  util.rs
axumlike/src/extract/: rejection.rs  request_parts.rs
axumlike/src/extract/builtin/: mod.rs  query.rs  typed_header.rs
axumlike/src/handler/: future.rs  into_service.rs
axumlike/src/router/: empty_router.rs  future.rs  method_filter.rs  route.rs
axumlike/src/service/: mod.rs
