#[package]
#name = "hello_world"
#version = "0.1.0"
#edition = "2018"
#
## See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#
#[dependencies]
#axumlike = { path = "../.." }
#tokio = { version = "1.0", features = ["full"] }
#tracing = "0.1.36"
#tracing-subscriber = "0.2.20"
#color-eyre = "0.6.2"
#serde = { version = "1.0", features = ["derive"] }
#http = "0.2.8"
#headers = "0.3.7"
#tower-http = {version = "0.1.1", features = ["full"]}
#hyper = "0.14.20"
#tower = "0.4.13"
#bytes = "1.2.1"

[package]
name = "hello_world"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axumlike = { path = "../..", features = ["headers"] }
bytes = "1.1.0"
color-eyre = "0.5.11"
headers = "0.3.4"
http = "0.2.4"
hyper = "0.14.12"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = {version = "0.1.1", features = ["full"]}
tracing = "0.1.26"
tracing-subscriber = "0.2.20"